# Building-a-CourseApp-with-FastAPI

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 658a0375c15c_.py
api/: courses.py  sections.py  users.py
db/: alembic.ini  db_setup.py
db/models/: course.py
