[tool.poetry]
name = "building-an-courseapp-with-fastapi"
version = "0.1.0"
description = ""
authors = ["kevin-nduati <nduatikevin1@gmail.com>"]
readme = "README.md"
packages = [{include = "building_an_courseapp_with_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
